# circuit_finder

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  gradle.properties  settings.gradle
.github/workflows/: build.yaml
app/: build.gradle
app/src/main/java/com/ledmington/: BitArray.java  BoolArray.java  Circuit.java  Constants.java  LogicAnd.java  LogicFunction.java  Main.java  SignedSum.java  Switch.java
app/src/main/java/com/ledmington/ast/: AndNode.java  BracketsNode.java  Node.java  NotNode.java  OneNode.java  Optimizer.java  OrNode.java  VariableNode.java  ZeroNode.java
app/src/main/java/com/ledmington/ast/nodes/: AndNode.java  BracketsNode.java  MultiNode.java  Node.java  NotNode.java  OneNode.java  OrNode.java  VariableNode.java  ZeroNode.java
app/src/main/java/com/ledmington/ast/opt/: AndAbsorption.java  AndComplementation.java  AndIdempotence.java  AndOne.java  AndZero.java  DeMorganOr.java  DoubleNot.java  NoBrackets.java  NotConstant.java  Optimization.java  OrAbsorption.java  OrOne.java  OrZero.java  ReverseAndDistributivity.java
app/src/main/java/com/ledmington/utils/: FormatUtils.java  Generators.java  ImmutableSet.java  MapBuilder.java  MiniLogger.java  SetBuilder.java
app/src/test/java/com/ledmington/: TestBitArray.java  TestFormatUtils.java  TestLogicAnd.java  TestNodes.java  TestSignedSum.java
app/src/test/java/com/ledmington/ast/: TestAnd.java  TestBrackets.java  TestCombined.java  TestConstants.java  TestNot.java  TestOptimizer.java  TestOr.java
app/src/test/java/com/ledmington/ast/nodes/: TestNodes.java
app/src/test/java/com/ledmington/ast/opt/: TestAndComplementation.java  TestAndIdempotence.java  TestAndOne.java  TestAndZero.java  TestDoubleNot.java  TestMergeOr.java  TestNoBrackets.java  TestOrOne.java  TestOrZero.java  TestReverseAndDistributivity.java  TestReverseOrDistributivity.java
bench/: bench_qmc.cpp  bench_remove_duplicates.cpp
cli/: build.gradle
cli/src/main/java/com/ledmington/: AbstractLogicFunction.java  BitArray.java  LogicAnd.java  LogicFunction.java  LogicNand.java  LogicNot.java  LogicOr.java  Main.java  SignedSum.java
cli/src/main/java/com/ledmington/ast/nodes/: AndNode.java  Node.java  VariableNode.java
cli/src/main/java/com/ledmington/ast/opt/: AndOne.java  AndZero.java  DeMorganAnd.java  MergeOr.java  ReverseOrDistributivity.java
cli/src/main/java/com/ledmington/utils/: ImmutableMap.java
cli/src/test/java/com/ledmington/: TestBitArray.java  TestLogicAnd.java  TestLogicFunction.java  TestLogicNand.java  TestLogicNot.java  TestLogicOr.java  TestSignedSum.java
cli/src/test/java/com/ledmington/ast/opt/: TestDeMorganAnd.java  TestDeMorganOr.java  TestMergeAnd.java  TestNotConstant.java  TestOrAbsorption.java  TestOrIdempotence.java
cmake/modules/: FindClangFormat.cmake  FindClangTidy.cmake
exec/: main.cpp
funlib/: build.gradle
funlib/src/main/java/com/ledmington/function/: AbstractLogicFunction.java  BitArray.java  LogicAnd.java  LogicFunction.java  LogicNand.java  LogicNor.java  LogicNot.java  LogicOr.java  LogicXnor.java  LogicXor.java  SignedSum.java  UnsignedSum.java
funlib/src/test/java/com/ledmington/function/: TestBitArray.java  TestLogicAnd.java  TestLogicFunction.java  TestLogicNand.java  TestLogicNor.java  TestLogicNot.java  TestLogicOr.java  TestLogicXnor.java  TestLogicXor.java  TestSignedSum.java  TestUnsignedSum.java
include/: cf.hpp  functions.hpp  qmc.hpp
include/cf/: logic_function.hpp  search.hpp
opt/: build.gradle
opt/src/jmh/java/com/ledmington/bench/: QMC16Bench.java
opt/src/main/java/com/ledmington/ast/: Optimizer.java  QMC16.java
opt/src/main/java/com/ledmington/ast/nodes/: AndNode.java  MultiNode.java  Node.java  NotNode.java  OneNode.java  OrNode.java  VariableNode.java  ZeroNode.java
opt/src/main/java/com/ledmington/ast/opt/: AndAbsorption.java  AndComplementation.java  AndIdempotence.java  AndOne.java  AndZero.java  DeMorganAnd.java  DeMorganOr.java  DoubleNot.java  MergeAnd.java  MergeOr.java  NotConstant.java  Optimization.java  OptimizationResult.java  OrAbsorption.java  OrComplementation.java  OrIdempotence.java  OrOne.java  OrZero.java  ReverseAndDistributivity.java  ReverseOrDistributivity.java
opt/src/main/java/com/ledmington/qmc/: PrimeImplicantChart.java  QMC16.java  QMC16_V1.java  QMC16_V2.java  QMC16_V3.java
opt/src/test/java/com/ledmington/ast/: TestAnd.java  TestCombined.java  TestConstants.java  TestEvaluate.java  TestNodeOrder.java  TestNot.java  TestOptimizer.java  TestOr.java  TestQMC.java
opt/src/test/java/com/ledmington/ast/nodes/: TestNodes.java
opt/src/test/java/com/ledmington/ast/opt/: TestAndAbsorption.java  TestAndComplementation.java  TestAndIdempotence.java  TestAndOne.java  TestAndZero.java  TestDeMorganAnd.java  TestDeMorganOr.java  TestDoubleNot.java  TestMergeAnd.java  TestMergeOr.java  TestNotConstant.java  TestOrAbsorption.java  TestOrComplementation.java  TestOrIdempotence.java  TestOrOne.java  TestOrZero.java  TestReverseAndDistributivity.java  TestReverseOrDistributivity.java
opt/src/test/java/com/ledmington/ast/qmc/: TestPrimeImplicantChart.java  TestQMC.java  TestQMC16V1.java  TestQMC16V2.java  TestQMC16V3.java
repl/: build.gradle
repl/src/main/antlr/: Boolean.g4
repl/src/main/java/com/ledmington/: ASTGenerationVisitor.java  Main.java
src/: main.cpp  search.cpp
test/: test_functions.cpp  test_logic_not.cpp  test_qmc.cpp  test_utils.cpp  testing_infra.hpp
utils/: build.gradle
utils/src/jmh/java/com/ledmington/bench/: ListAdd.java  ListContains.java  MiniLoggerBench.java  PopCountBench.java  ShortListVSArrayList.java
utils/src/main/java/com/ledmington/utils/: BitUtils.java  FormatUtils.java  Generators.java  ImmutableMap.java  ImmutableSet.java  MapBuilder.java  MaskedShort.java  MiniLogger.java  SetBuilder.java  ShortList.java  TerminalCursor.java
utils/src/test/java/com/ledmington/utils/: TestBitUtils.java  TestFormatUtils.java  TestImmutableMap.java  TestMaskedShort.java  TestShortList.java
